--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,7 @@ flask-restful = "*"
 mysqlclient = "*"
 marshmallow = "*"
 flask-cors = "*"
+python-jose-cryptodome = "*"
 
 [requires]
 python_version = "3.7"
